# All-Press

./: .gitignore  .md_cleanup_guide.txt  ARCHITECTURE.md  Boost-Target-release.cmake  Boost-release-armv8-data.cmake  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CORRECOES_COMPILACAO.md  CORRECOES_ERROS_CONSOLE.md  CORRECOES_UPLOAD.md  Crow-Target-release.cmake  Crow-release-armv8-data.cmake  CrowConfig.cmake  CrowConfigVersion.cmake  DOCUMENTACAO.md  Dockerfile  FRONTEND_COMPLETE.md  FindOpenSSL.cmake  IMPLEMENTACAO_CONCLUIDA.md  INTEGRATION_EXAMPLES.md  Iconv-release-armv8-data.cmake  LICENSE  OpenSSL-Target-release.cmake  OpenSSLConfig.cmake  PLOTTER_IMPLEMENTATION_SUMMARY.md  PLOTTER_SUPPORT_IMPLEMENTATION.md  PROJECT_SUMMARY.md  PROXIMOS_PASSOS.md  QUICKSTART.md  README.md  README_DEBUG.md  RESUMO_CORRECOES_FINAIS.md  REVISAO_COMPLETA.md  SOLUCAO_STATUS_REAL.md  STATUS_APLICACAO.md  TESTE_STATUS_IMPRESSORAS.md  TESTE_UPLOAD.md  VERIFICACAO_REAL_CONECTIVIDADE.md  (+28 more)
config/: plotter_specs.json
design_update/files/: App.tsx  DESIGN_RECOMMENDATIONS.md  IMPLEMENTATION_GUIDE.md  UIComponents.tsx  index.css
docs/: API.md  MANUFACTURER_SPECS.md  PLOTTER_INTEGRATION_EXAMPLES.md  PLOTTER_QUICKSTART.md  PLOTTER_SUPPORT.md  openapi.yaml
frontend/: UI_ANALYSIS_REPORT.md  package.json  print_debug_test.html  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: upload.test.tsx
frontend/src/components/: Dropzone.tsx  JobCard.tsx  Layout.tsx  LogEntry.tsx  PerformanceChart.tsx  PrintPreview.tsx  PrinterCard.tsx  SettingsSection.tsx  Sidebar.tsx  StatusIndicator.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/components/ui/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  Loader.tsx  Progress.tsx  Select.tsx  Skeleton.tsx  index.ts
frontend/src/hooks/: useFilteredJobs.ts  useFilteredPrinters.ts  useJobs.ts  useLogs.ts  useWebSocket.ts
frontend/src/lib/: design-tokens.ts  utils.ts
frontend/src/modules/dashboard/: Dashboard.tsx  JobItem.tsx  PrinterCard.tsx  StatsCard.tsx
frontend/src/modules/jobs/: Jobs.tsx
frontend/src/modules/monitor/: Monitor.tsx
frontend/src/modules/printers/: Printers.tsx
frontend/src/modules/upload/: Upload.tsx
frontend/src/pages/: Dashboard.tsx  JobsPage.tsx  LogsPage.tsx  PrintersPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/store/: jobStore.ts  printerStore.ts  systemStore.ts  uiStore.ts  uploadStore.ts
frontend/src/types/: index.ts
include/api/: rest_server.h  websocket_server.h
include/conversion/: file_processor.h
include/core/: color_manager.h  job_queue.h  printer_manager.h
include/database/: sqlite_manager.h
include/network/: ipp_client.h  network_scanner.h
include/protocols/: compatibility_matrix.h  hpgl_generator.h  plotter_protocol_base.h  postscript_generator.h  protocol_factory.h
include/utils/: config.h  file_utils.h  logger.h
scripts/: build.sh  dev.sh  install.sh  verify.sh
src/: main.cpp
src/api/: endpoints.cpp  http_server.cpp  plotter_endpoints.cpp  rest_server.cpp  websocket_server.cpp
src/conversion/: file_processor.cpp  image_processor.cpp  pdf_processor.cpp
src/core/: color_manager.cpp  job_queue.cpp  job_queue_plotter.cpp  printer_manager.cpp  printer_manager_plotter.cpp
src/database/: models.cpp  sqlite_manager.cpp
src/network/: cups_client.cpp  ipp_client.cpp  network_scanner.cpp
src/protocols/: compatibility_matrix.cpp  hpgl_generator.cpp  postscript_generator.cpp  protocol_factory.cpp
src/utils/: config.cpp  file_utils.cpp  logger.cpp
test_files/: sample_document.txt  simple_test.html
tests/: CMakeLists.txt  test_file_processor.cpp  test_job_queue.cpp  test_printer_manager.cpp  test_rest_api.cpp
